--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,6 @@
     "name": "Angular.country-select",
     "version": "14.04.17",
     "main": [
-        "angular.country-select.js",
+        "angular.country-select.js"
     ]
 }
